# haskell-playground

./: LICENSE  Makefile  README.md
build-sandbox/: Dockerfile  build-and-publish.sh
controller/: controller.cabal
sandbox/: Dockerfile  Makefile  entrypoint.sh
sandbox-base/: .gotty  Dockerfile  Makefile  dev.sh  entrypoint.sh  nginx.conf  template.nginx.conf
sandbox-base/api/: api.cabal  cabal.project.freeze  dev.env.sh  devenv.sh  env.sh  hie.yaml
sandbox-base/api/app/: Commands.hs  Config.hs  Exec.hs  Fs.hs  Main.hs  ReverseProxy.hs  Tree.hs
sandbox-base/api/app/Sandbox/: Commands.hs  FileSystem.hs
sandbox-base/sandbox-example/: README.md
sandbox-base/test-sandbox/: sandbox.cabal
sandbox-base/test-sandbox/sandbox/: repl.x.sh
sandbox-base/test-sandbox/sandbox/checks/: default.x.sh
sandbox-base/test-sandbox/sandbox/tasks/: Run tests.check.sh  Shell.x.sh
sandbox-builder/: Dockerfile  build-and-publish.sh  build.sh
sandbox-container/: .gitignore  .gotty  Dockerfile  Dockerfile.builder  Makefile  build.sh  dev.sh
sandbox-container/Playground/: Contacts.view.link  README.default.view.md  log.txt
sandbox-container/api/: api.cabal  cabal.project.freeze  devenv.sh  hie.yaml
sandbox-container/api/app/: Config.hs  Main.hs  ReverseProxy.hs
sandbox-container/api/app-lib/Sandbox/: Api.hs  Commands.hs  Config.hs  FileSystem.hs  FileSystemApi.hs  ReverseProxy.hs
sandbox-container/api/app/Sandbox/: Api.hs  Commands.hs  FileSystem.hs
sandbox-container/api/gen-swagger-json/: Main.hs
sandbox-container/test-sandbox/tests/: Example.hs
sandbox-ui/: .gitignore  Makefile  build-in-docker.sh  build.sh  package-lock.json  package.json  swagger-to-ts.sh  swagger.json  webpack.config.js
sandbox-ui/src/: index.html  index.tsx
sandbox-ui/src/App/: App.module.css  App.tsx  ContextTree.module.css  ContextTree.tsx
sandbox-ui/src/Widget/: Commands.module.css  Commands.tsx  Editor.tsx  Widget.module.css  Widget.tsx
sandbox-ui/src/icons/: SVGIcon.module.css  SVGIcon.tsx
sandbox-ui/src/react-haskell/Data/Tree/: Tree.tsx  TreeView.tsx
sandbox-ui/src/styles/: globals.css
sandboxes/aeson-sandbox/: .ghci  aeson-sandbox.cabal  build.sh
sandboxes/base-sandbox/: base-sandbox.cabal
sandboxes/lesson-task-example-sandbox/: README.md
sandboxes/lesson-task-example-sandbox/lib/: SandboxLib.hs
sandboxes/lesson-task-example-sandbox/sandbox/: build.sh  repl.sh
sandboxes/lesson-task-example-sandbox/sandbox/checks/: Run all checks.sh  default.sh
sandboxes/lesson-task-example-sandbox/sandbox/editor/: Main.hs.sh  README.md.sh  SandboxLib.hs.sh  default.sh
sandboxes/lesson-task-example-sandbox/sandbox/tasks/: Run tests.sh  Shell.sh
sandboxes/servant-sandbox/: .ghci  repl.sh  servant-sandbox.cabal
ui/: Dockerfile.builder  Makefile  package-lock.json  package.json  webpack.config.js
ui/src/: index.tsx
ui/src/Widget/: Widget.tsx
widget/: package-lock.json  package.json  tsconfig.json  webpack.config.js
widget/src/: index.d.ts  index.html  index.tsx
widget/src/Widget/: Editor.module.css  Editor.tsx  Tabs.tsx  Widget.d.ts  Widget.module.css  Widget.tsx  monaco-haskell.ts
