cabal-version:      2.4
name:               api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             visortelle
maintainer:         visortelle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable api
  main-is:          Main.hs

  ghc-options:
    -threaded
    -Wall

  default-extensions: OverloadedStrings

  -- Modules included in this command, other than Main.
  other-modules: Config, ReverseProxy, Sandbox.FileSystem, Sandbox.Commands

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                ^>=4.14.0
    , base32
    , bytestring
    , containers
    , directory           >=1.3
    , filepath
    , process
    , raw-strings-qq
    , servant-server      >=0.19
    , show-prettyprint
    , text
    , universe-base
    , uri-encode
    , wai
    , wai-logger
    , warp

  hs-source-dirs:   app
  default-language: Haskell2010
