cabal-version:      2.4
name:               api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             visortelle
maintainer:         visortelle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable api
  main-is:          Main.hs

  ghc-options:
    -threaded
    -Wall

  default-extensions: OverloadedStrings

  build-depends:
    base,
    api,
    warp,
    wai-logger,
    servant-server,
    directory,
    show-prettyprint

  hs-source-dirs:   app
  default-language: Haskell2010


library
  ghc-options:
    -Wall

  default-extensions: OverloadedStrings

  exposed-modules: Sandbox.Config, Sandbox.ReverseProxy, Sandbox.Api, Sandbox.FileSystem, Sandbox.Commands

  build-depends:
    , aeson
    , aeson-pretty
    , base                ^>=4.14.0
    , base32
    , bytestring
    , containers
    , directory           >=1.3
    , filepath
    , lens
    , process
    , port-utils
    , raw-strings-qq
    , servant-server      >=0.19
    , servant-swagger
    , servant-swagger-ui
    , show-prettyprint
    , swagger2
    , text
    , universe-base
    , uri-encode
    , wai
    , wai-logger
    , warp

  hs-source-dirs:   app-lib
  default-language: Haskell2010

executable gen-swagger-json
  main-is:          Main.hs

  ghc-options:
    -Wall

  default-extensions: OverloadedStrings

  build-depends:
    base,
    api

  hs-source-dirs:   gen-swagger-json
  default-language: Haskell2010
